
//go:generate protoc --gogofaster_out=. protobuf.proto

syntax = 'proto3';

package series;

message ProtStatFull {
    int64 time = 1;
    int64 count = 7;
    double min = 2;
    double max = 3;
    double sum = 4;
    double last = 5;
}

// object for just int32 time and one value
message ProtStatSmall {
    int64 time = 1;
    double val = 2;
}

message ProtStat {
    bool stat_type = 1; // false == small true == full
    ProtStatFull stat = 3;
    ProtStatSmall small_stat = 4;
}

message ProtStats {
    bool full_time_resolution = 1;
    repeated ProtStat stats = 2;
}